fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ section.smaller {
 .profpic .institution {
   text-align: center;
   font-size: 15px;
-  height: 10px;
+  height: 60px;
 }
 
 .profpic .role {
